src/objects/State__c.object
<CustomObject>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>States</relationshipLabel>
        <relationshipName>States</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Country__c</fullName>
        <formula>HYPERLINK(Country_Name__c ,Country_Name__r.Name, &quot;_self&quot;) + &quot; -&gt; &quot; + Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Districts__c</fullName>
        <label>Total Number of Districts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>State</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>India_State</fullName>
        <columns>NAME</columns>
        <columns>Country_Name__c</columns>
        <columns>State_Code__c</columns>
        <columns>State_Country__c</columns>
        <columns>Total_Number_of_Districts__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country_Name__c</field>
            <operation>equals</operation>
            <value>India</value>
        </filters>
        <label>India State</label>
    </listViews>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>